22-03-2021: + as of now, final commit for the paper

--- a/hausarbeit.Rmd
+++ b/hausarbeit.Rmd
@@ -136,7 +136,7 @@ Weiterhin rechtfertigt er hier die Auswahl des theoretischen Modells von Lupia u
 
 ## Gründe für Wichtigkeit der Untersuchung von Minderheitsregierungen
 
-Nachdem nun kurz das Forschungsdesign und die Herangehensweise Saalfelds dargelegt wurden, soll an dieser Stelle noch kurz darauf eingegangen werden, wieso es für die Forschung zu Regierungsbeendigungen von großer Bedeutung ist, sich explizit mit der Thematik der Minderheitsregierungen auseinanderzusetzen.
+Nachdem nun kurz das Forschungsdesign und die Herangehensweise Saalfelds dargelegt wurden, soll an dieser Stelle noch kurz darauf eingegangen werden, wieso es für die Forschung zu Regierungsbeendigungen von großer Bedeutung ist, sich explizit mit der Thematik der Minderheitsregierungen auseinanderzusetzen. Minderheitsregierungen werden von dieser Arbeit dahingehend verstanden, dass es sich um Kabinette von Parteien handelt, die im Parlament keine eigene dauerhafte Mehrheit haben und auf Unterstützung von Parteien von außerhalb des eigenen Kabinettes angewiesen sind. Dabei halten diese Parteien von außerhalb jedoch keine Posten innerhalb des Kabinettes (nach Crombez 1996, S. 1).
 
 Zunächst sei hier ein auf den ersten Blick pragmatischer Grund genannt: der nicht zu vernachlässigende Anteil dieser in den Daten. Bereits 1984 wies Kaare Strøm, eine Koryphäe auf dem Gebiet der Forschung zu Minderheitsregierungen und Regierungsbeendigung, zurecht darauf hin, dass eben jene einen Anteil von ungefähr 35% an Regierungen in den damals für ihn vorliegenden Daten ausmachen (Strøm 1984, S. 199). Und dieser Anteil hat sich auch aktuell nicht nennenswert verkleinert, wie aus den dieser Untersuchung zugrunde liegenden Daten hervorgeht (32,81%, vgl. Tabelle 2 im Anhang). Somit stellt diese Regierungsform weiterhin ungefähr 1/3 aller Kabinette in den Daten dar - eine nicht zu vernachlässigende Größe und damit in jedem Fall allein schon aus der rein pragmatischen Sicht auf die zur Verfügung stehenden Daten eine Untersuchung wert.
 
@@ -144,7 +144,7 @@ Aus eher normativer Sicht wurde, wie auch bereits in der Einleitung angesprochen
 
 Zuletzt sei, auch aus dem theoretischen Hintergrund von Rational Choice-Perspektiven, angemerkt, dass Minderheitsregierungen in diesem Kontext als nicht der Norm entsprechend. Aus normativer Perspektive könnte auch hier wieder argumentiert werden, dass der Regierungsanspruch ja auf der Tatsache basiere, dass die Mehrheit der wählenden Bevölkerung repräsentiert werde - bei Minderheitsregierungen, wie der Name schon sagt, ist dies nicht der Fall. Dies macht sie eigentlich auch aus koalitions- und verhandlungstheoretischer Sicht eher nicht zu einer Alternative, die Akteure - sofern man deren rationale Handlungsweise annehmen würde - durchführen würden. Auf diese Umstände wurde ebenso von Strøm hingewiesen (vgl. Strøm 1984, S. 200).
 
-Somit ergibt sich für vorliegende Arbeit, sowohl aus empirischer, als auch aus theoretischer Perspektive die Notwendigkeit, sich eingehender mit Minderheitsregierungen zu beschäftigen. Saalfelds Modell von 2008, welches das Risiko des vorzeitigen Scheiterns von jeglicher Regierungsform untersuchte, erscheint in diesem Licht als geeignete Schablone, um ebenfalls auf einen auf Minderheitsregierungen bereinigten Datensatz angewendet zu werden. Die von ihm gewählte Struktur und das Forschungsdesign seiner Untersuchung erscheinen als sehr geeignet, um damit die bereits in der Einleitung aufgeworfene Frage nach Faktoren der Stabilität und Instabilität für Minderheitsregierungen explorativ zu untersuchen und so für weitere Forschung in diesem Bereich Wege aufzuzeigen.
+Somit ergibt sich für vorliegende Arbeit, sowohl aus empirischer, als auch aus theoretischer Perspektive die Notwendigkeit, sich eingehender mit Minderheitsregierungen zu beschäftigen. Es wird dabei bewusst stark explorativ vorgegangen, weshalb hier auch nicht zwischen Ein-Parteien-Minderheitsregierungen und Koalitions-Minderheitsregierungen unterschieden werden sollte, um ein möglichst breites Datenspektrum untersuchen zu können. Saalfelds Modell von 2008, welches das Risiko des vorzeitigen Scheiterns von jeglicher Regierungsform untersuchte, erscheint in diesem Licht als geeignete Schablone, um ebenfalls auf einen auf Minderheitsregierungen bereinigten Datensatz angewendet zu werden. Die von ihm gewählte Struktur und das Forschungsdesign seiner Untersuchung, worauf bereits eingegangen wurde, erscheinen als sehr geeignet, um damit die bereits in der Einleitung aufgeworfene Frage nach Faktoren der Stabilität und Instabilität für Minderheitsregierungen explorativ zu untersuchen und so für weitere Forschung in diesem Bereich Wege aufzuzeigen.
 
 # Empirie & Untersuchung
 
@@ -311,14 +311,14 @@ car::vif(coxPH.INST)
 
 Für den AIC-Wert wurde für dieses Modell ein Wert von 888 festgestellt, im Vergleich zu den vorherigen Modellen der bisher niedrigste. Beim Test auf die Proportional Hazards-Annahme wurde jedoch festgestellt, dass sowohl die Variablen *pm_pow* und *pm_diss_pow* diese verletzen, weshalb sie aus dem Modell ausgeschlossen werden mussten. Bei den verbleibenden vier Variablen befanden sich die Werte hierfür und auch für die VIF-Faktoren jedoch im annehmbaren Bereich, sodass mit diesen das Modell gerechnet werden konnte.
 
-Beim Blick auf die Signifikanzwerte wird deutlich, dass für die Variablen *invest* und für *erdda_bicam* keine Interpretierbarkeit gegeben ist, da diese statistisch insignifikant sind. Gerade im Fall des positiven Parlamentarismus ist dieser Befund interessant - hier wäre es denkbar gewesen, dass durch den Mechanismus, dass eine Regierung vor Amtsantritt explizit durch ein Investiturvotum bestätigt werden müsste, eine erhöhte Scheiterwahrscheinlichkeit gerade für Minderheitskabinette ergeben hätte können - dem ist jedoch empirisch gesehen nicht so. Hier wären in jedem Fall tiefgreifendere Untersuchungen notwendig, um noch mehr auf kausale Mechanismen hierzu eingehen zu können.
+Beim Blick auf die Signifikanzwerte wird deutlich, dass für die Variablen *invest* und für *erdda_bicam* keine Interpretierbarkeit gegeben ist, da diese statistisch insignifikant sind. Gerade im Fall des positiven Parlamentarismus ist dieser Befund interessant - hier wäre es mit der Hypothese Bergmans durchaus auch denkbar gewesen, dass durch den Mechanismus, dass eine Regierung vor Amtsantritt explizit durch ein Investiturvotum bestätigt werden müsste, eine erhöhte Scheiterwahrscheinlichkeit gerade für Minderheitskabinette ergeben hätte können (vgl. Bergman 1993, S. 55-57) - dem ist jedoch empirisch gesehen hier nicht so. Hier wären in jedem Fall tiefgreifendere Untersuchungen notwendig, um noch mehr auf kausale Mechanismen hierzu eingehen zu können.
 Es können jedoch sowohl *cabunan* (2,12) als auch *erdda_semip* (2,50) interpretiert werden, da sie hochsignifikante Werte enthalten. In beiden Fällen wird aus den hazard ratios ersichtlich, dass es sich um das Scheiterrisiko sehr stark erhöhende Variablen handelt, wenn sich mit Minderheitsregierungen beschäftigt wird. Auch die Variable *post_election_cabinet* (0,50) weist einen statistisch signifikanten Koeffizienten auf.
 Auch in Saalfelds Modell sind die Werte der hazard ratios für diese Variablen sehr hoch (1,43 bzw. 3,87), wenn auch angefügt werden muss, dass für *cabunan* im dortigen institutionellen Modell kein signifikanter Wert vorliegt. Dennoch geht der Effekt in die gleiche kausale Richtung, lässt man für einen Moment die Signifikanzen außer Acht.
 
 Hierbei scheint es auch für Minderheitsregierungen den kausalen Zusammenhang zwischen Einstimmigkeitsregel in Koalitionen und Scheiterwahrscheinlichkeit zu geben - betrachtet man isoliert nur institutionelle Variablen. Akteure versuchen generell, die Transaktionskosten innerhalb der Koalition möglichst gering zu halten. Durch die Einstimmigkeit jedoch wird dies nicht unwesentlich erschwert (vgl. Saalfeld 2008, S. 355). Gerade auch für Minderheitsregierungen, welche ohnehin immer kompromissbereit sein müssen (sei es als Minderheitskoalition oder Ein-Parteien-Minderheit), ist dieser Faktor logischerweise ausschlaggebender, als für andere Regierungsformen. So kann beispielsweise auch durch vorgezogene Neuwahlen oder durch Kabinettsumbildungen ein neuer Regierungspartner gefunden werden, eventuell auch, um die eigene Handlungsfähigkeit zu erhöhen.
 
 Das erhöhte Scheiterrisiko im Falle semi-präsidentieller Systeme ließe sich unter Rückgriff auf die Vetospieler-Theorie von Tsebelis erklären: durch Einbezug von mehr Vetospielern in ein System entstehen auch mehr Reibungspunkte, was auch zu politischem Stillstand oder Interessenskonflikten zwischen den Akteuren führen kann. Macht dann ein Vetospieler, wie beispielsweise ein Präsident mit starken Auflösungsmöglichkeiten für das Parlament oder die Regierung, von seinen Befugnissen gebrauch, kann sich das auf das Scheiterrisiko von Regierungen im Allgemeinen auswirken (vgl. Tsebelis 2002, S. 215ff.). Wenn also Interessensdifferenzen zwischen dem Präsidenten und der Regierung bestehen, so kann es in diesem Fall auch zu einer erhöhten Scheiterwahrscheinlichkeit auch für diese Regierungsform kommen.
-Weiterhin kann von Kabinetten, die unmittelbar nach einer regulären Wahl zustande kamen, eine höhere Stabilität erwartet werden, als von jenen, die während einer Legislaturperiode durch Neuwahlen oder Umbildungen geformt werden bzw. werden mussten. Diermeier und Stevenson sprachen dieses Phänomen bereits 1999, auch unter Bezugnahme auf Arbeiten von Paul Warwick an (Diermeier/Stevenson 1999, S. 1061-1062). 
+Weiterhin kann von Kabinetten, die unmittelbar nach einer regulären Wahl zustande kamen, eine höhere Stabilität erwartet werden, als von jenen, die während einer Legislaturperiode durch Neuwahlen oder Umbildungen geformt werden bzw. werden mussten. Diermeier und Stevenson sprachen dieses Phänomen bereits 1999, auch unter Bezugnahme auf Arbeiten von Paul Warwick an. Sie sehen in dieser Variable ebenfalls größere Wichtigkeit für vorzeitige Neuwahlen zu späteren Zeitpunkten in der Legislaturperiode (Diermeier/Stevenson 1999, S. 1061-1064). 
 
 Es muss hier jedoch angemerkt werden, dass im abschließenden Modell dieser Arbeit weder die Variable *erdda_semip*, noch die Variable *cabunan* signifikante Werte aufweisen. Hingegen ist dort die Variable *post_election_cabinet* erneut signifikant vertreten. Im best fit neu vertreten ist aus dem Bereich der institutionellen Variablen ebenfalls die Variable zum Zwei-Kammern-System, *erdda_bicam*.
 
@@ -407,7 +407,7 @@ Betrachtet man nun zunächst erneut die für das gesamte Modell ausgegebenen Sta
 
 Weiterhin wurde beim Schätzen des Modells festgestellt, dass die Variable *inflation_Abs* die Proportional Hazards-Annahme verletzt. Demnach musste diese also ausgeschlossen werden, um die Modellvoraussetzungen für Cox Proportional Hazards-Modelle nicht zu verletzen.
 
-Jedoch konnte auch nach Ausschluss dieser Variable aus den verbleibenden beiden zu Arbeitslosigkeit und zu elektoraler Volatilität keine statistisch signifikante hazard ratio herausgelesen werden. Somit konstatiert diese Arbeit, dass die Sichtweise der kritischen exogenen Events für die Thematik der Stabilität oder Instabilität von Minderheitsregierungen wenig bis gar keinen Ausschlag gibt.
+Jedoch konnte auch nach Ausschluss dieser Variable aus den verbleibenden beiden zu Arbeitslosigkeit und zu elektoraler Volatilität keine statistisch signifikante hazard ratio herausgelesen werden. Somit konstatiert diese Arbeit, dass die Sichtweise der kritischen exogenen Events für die Thematik der Stabilität oder Instabilität von Minderheitsregierungen wenig bis gar keinen Ausschlag gibt. Damit schließt sie sich in diesem Themenbereich dem bisherigen Kenntnissstand zum nicht vorhandenen Einfluss von Inflation und Arbeitslosigkeit an (vgl. Krauss 2021, S. 2).
 
 
 ### Modell des best fit
@@ -486,7 +486,7 @@ kbl(tidyBestFit) %>%
 Zunächst zu den **destabilisierende Faktoren für Minderheitsregierungen**. In diese Kategorie fallen, nach vorliegender Analyse, die Variablen zum Zwei-Kammern-System, zu der Anzahl effektiver Parteien im Parlament, zur Dauer der Koalitionsverhandlungen und überraschenderweise, da eher konterintuitiv, auch, ob einem Kabinett der gleiche Premierminister vorsteht, wie bereits dem vorigen.
 Dabei **erhöht** sich das Risiko des Regierungsscheiterns für Kabinette in Systemen mit *Zwei-Kammern-System* um 230%, im Vergleich zu Systemen ohne diesen Wesenszug und wenn für die anderen Variablen im Modell kontrolliert wird. Für jede weitere im System vorhandene *effektive Partei* nach dem Index von Laakso und Taagepera erhöht sich außerdem das Scheiterrisiko um 71%, ceteris paribus. Für jeden weiteren Tag, den *Koalitionsverhandlungen länger dauern*, erhöht sich das Risiko des Scheiterns um zusätzlich 1%, ceteris paribus. Außerdem erhöht sich das Risiko um 115%, wenn einem Parlament der *gleiche Premierminister* vorsteht, wie bereits dem vorherigen Parlament und wenn für alle anderen Variablen im Modell kontrolliert wird.
 
-Die Befunde zum Zwei-Kammern-System spiegeln nicht nur Saalfelds Modell (vgl. Saalfeld 2008, S. 340-341) wider, welcher auch einen stark destabilisierenden Zusammenhang für diese Variable nachweisen konnte. So finden sich beispielsweise auch in einer Untersuchung Bergman et al. (2015) für West- und Osteuropa im Vergleich wieder (vgl. Bergman et al. 2015, S. 364-366). Gleiches konnten auch Schleiter und Morgan-Jones nachweisen (vgl. Schleiter/Morgan-Jones, S. 505-508). Diese Arbeit konnte jedoch zeigen, dass die bisherigen Befunde hierzu auch für Minderheitsregierungen gelten. Interessant ist hier anzumerken, dass im speziell die Institutions-Variablen beinhaltenden Modell noch keine signifikanz für *erdda_bicam* vorlag - stattdessen jedoch für semi-präsidentielle Systeme (*erdda_semip*), welche nun im best fit jedoch nicht mehr beinhaltet wurden.
+Die Befunde zum Zwei-Kammern-System spiegeln nicht nur Saalfelds Modell (vgl. Saalfeld 2008, S. 340-341) wider, welcher auch einen stark destabilisierenden Zusammenhang für diese Variable nachweisen konnte. So finden sich beispielsweise auch in einer Untersuchung Bergman et al. (2015) für West- und Osteuropa im Vergleich wieder (vgl. Bergman et al. 2015, S. 364-366). Gleiches konnten auch Schleiter und Morgan-Jones nachweisen (vgl. Schleiter/Morgan-Jones, S. 505-508). Diese Arbeit konnte jedoch zeigen, dass die bisherigen Befunde hierzu auch für Minderheitsregierungen gelten. Interessant ist hier anzumerken, dass im speziell die Institutions-Variablen beinhaltenden Modell noch keine signifikanz für *erdda_bicam* vorlag - stattdessen jedoch für semi-präsidentielle Systeme (*erdda_semip*), welche nun im best fit jedoch nicht mehr beinhaltet wurden. Erklärbar wäre dieser Zusammenhang jedoch aus dem gleichen theoretischen Hintergrund der Vetospieler-Theorie (nach Tsebelis 2002, S. 143ff.).
 
 Wie aktuell auch Walther und Hellström mittels einer Extreme Bounds Analyse aufzeigen, hat die Anzahl effektiver Parteien einen robusten Einfluss auf die Regierungsdauer in Mittel- und Osteuropa (vgl. Walther/Hellström 2021, S. 15-16). Vorliegende Arbeit konnte ebenfalls einen das Risiko erhöhenden Einfluss dieser Variable im Falle der Analyse von Minderheitsregierungen im abschließenden Modell feststellen. Mögliche Erklärungsansätze hierfür finden sich bereits in der Literatur: so erkennen Bergman, Ersson und Hellström bei der Untersuchung von Regierungen in Mittel- und Osteuropa in einer erhöhten Komplexität der Verhandlungsumgebung einen Grund dafür dass Regierungen instabiler werden - gleichbedeutend mit einem erhöhten Risiko der vorzeitigen Regierungsbeendigung für Minderheitsregierungen (vgl. Bergmann et al. 2015, S. 364). Dieses komplexere Verhandlungsumfeld kann ohne Zweifel unter anderem eben auch durch eine Erhöhung der Anzahl der dort vorhandenen effektiven Parteien herbeigführt werden.
 
@@ -497,28 +497,28 @@ Als letzter Instabilitätsfaktor für Minderheitsregierungen erweist sich im bes
 Als nächstes nun zu den **Faktoren, die die Stabilität von Minderheitsregierungen erhöhen** können. In der durchgeführten Analyse fallen in diese Kategorie die Variablen *parl_pref_range* zur Preference Range im jeweiligen Parlament, der Status als Kabinett nach einer regulären Wahl (*post_election_cabinet*) und *cab_seat_share*, also der prozentuale Sitzanteil des Kabinettes.
 Interpretiert werden können die hazard ratios wie folgt: für jeden Punkt Zunahme im Wert der Preference Range in einem Parlament sinkt das Risiko vorzeitigen Regierungsscheiterns um 1,5%. Weiterhin sinkt dieses Risiko um gerundet 65% für Kabinette, die nach einer regulären Wahl zustande kamen, gegenüber Kabinetten, die nicht auf diese Weise zustande kamen. Zuletzt sinkt das Risiko außerdem um gerundet 4% für jeden zusätzlichen Prozentpunkt an Sitzanteil im Parlament eines Kabinetts. Diese Ergebnisse verstehen sich ebenfalls wieder, wenn für alle Kovariaten im best fit-Modell kontrolliert wird.
 
+Im Falle der Preference Range eines Parlaments, die auch als ein Maß für die Komplexität des Verhandlungsumfeldes gesehen werden kann, ist der Effekt der Verminderung des Scheiterrisikos im Falle von Minderheitsregierungen eventuell zunächst verwunderlich - zumal diese Variable im thematisch spezifizieren Modell noch nicht signifikant war. Folgt man einer gängigen erklärung, dass stärker polarisierte und fraktionalisierte Verhandlungsumfelder das Regieren eigentlich komplizierter gestalten, da sich hier beispielsweise die Effekte von kritischen Events (wie Umfrageergebnissen) stärker auswirken können (nach Laver/Schofield 1990, S. 155-157).  In Saalfelds best fit-Modell bleibt diese Variable darüber hinaus auch insignifikant. Für Minderheitsregierungen scheint dies jedoch nicht der Fall zu sein. Eine alternative Erklärung dafür wurde bereits in den Ausführungen zum zweiten Modell angeschnitten: so wäre es denkbar, dass durch eine größere Preference Range in einem Parlament für Minderheitsregierungen mehr Handlungsoptionen entstehen, um sich bei Bedarf ihre notwendigen Mehrheiten zu suchen - ein Umstand, der diesen Faktor besonders für Minderheitsregierungen relevant macht, da in dieser Regierungsform angenommen werden kann, dass besser auf eine erhöhte Preference Range reagiert werden kann. In eine ähnliche Richtung argumentierten kürzlich auch Krauss und Thürk in ihrem aktuellen Artikel (vgl. Krauss/Thürk 2021, S. 3-4; S. 15), brachten dort auch derartige Regierungsformen als Alternativen in Ländern ins Gespräch, welche bisher nicht viele Erfahrungen damit sammeln konnten. Dennoch bedarf es auch hier noch mehr und vor allem tiefergehender Forschung.
 
+Ein weiterer das Risiko vermindernder Faktor, welcher sich als signifikant im best fit herausgestellt hat, ist der schon angesprochene Status als Kabinett nach einer regulären Wahl, gegenüber Kabinetten aus vorgezogenen Neuwahlen, Umbildungen oder auch Übergangsregierungen. Dass diese Kabinette allgemein eine längere Überlebensdauer aufweisen, wurde bereits bewiesen (vgl. Diermeier/Stevenson 1999, S. 1060-1064, King et al. 1990, S. 864f.). Doch auch im Fall von Minderheitsregierungen erweist sich diese Variable als stabilisierender Faktor, wie vorliegende Arbeit zeigen konnte: eben jener Effekt ist sowohl im spezifischen Institutionen-Modell, als auch im best fit signifikant. Für die Variable wäre es für weitere Forschung interessant, die Behauptung von Diermeier und Stevenson zu überprüfen, dass diese in Bezug auf vorgezogene Neuwahlen besondere Relevanz besitzt, was mit Hilfe eines competing risks-Forschungsdesigns möglich wäre.
 
+Abschließend liegt noch der Sitzanteil der jeweiligen Minderheitsregierung als risikovermindernder Faktor vor. Jedes zusätzliche Prozent an Sitzanteil für diese vermindert das Risiko vorzeitigen Regierungsscheiterns, wie angesprochen, um 1,5%. Die Variable erweist sich als für Minderheitsregierungen besonders relevant, taucht sie doch sowohl im best fit, als auch im ersten Modell zum Bereich "Struktur" signifikant und mit dem gleichen Einfluss auf. Dies ist, theoretisch verortet, auch auf einer Linie mit der Argumentation von Crombez, wonach eine Minderheitsregierung, je näher sie an der eigentlichen Mehrheit im Parlament angesiedelt ist, stärker und auch langlebiger ist. Zusätzlich spielt dabei noch die jeweilige größte Partei und deren Position im Parteiensystem eine Rolle (vgl. Crombez 1996, S. 11-13; S. 16f.).
 
-
-
-# Fazit der Untersuchung
+# Abschließendes Fazit der Untersuchung
 
 + Zukünftige Forschung sollte weiter in die Richtung forschen wie Krauss-Thürk 2021: Vereinbarungen über Zusammenarbeit können für Minderheitsregierungen besonders wichtig werden
 
-+ 
++ Crombez 1996: Minderheitsregierung als Zeichen der Stärke der jeweiligen Partei, die das eingeht
 
++ Strøm: Argumentationsstränge "Minderheitsregierung ist letzter Ausweg" vs. "Minderheitsregierung ist wirkliche Alternative, die gewollt eingegangen wird"
 
+Die vorliegende Arbeit hatte es sich zum Ziel gesetzt, mittels explorativer Datenanalyse die Variablen herauszustellen, welche einen Einfluss auf das Scheiterrisiko von Minderheitsregierungen haben. Anhand der Analyse konnte herausgearbeitet werden, dass es sowohl wie theoretisch zu Beginn angenommen stabilisierenden, aber auch destabilisierende Faktoren für diesen Regierungstypus existieren.
+Die Ergebnisse sollen nun noch einmal in aller Kürze aufgeführt werden. Die Faktoren *Zwei-Kammern-System*, eine *größere Anzahl effektiver Parlamentsparteien*, *längere Dauer der Koalitionsverhandlungen* und ob der *gleiche Premierminister* dem Kabinett vorsteht wirken nach der durchgeführten Analyse für Minderheitsregierungen eher destabilisierend. Demgegenüber wirken eine *größere Preference Range*, der *Status als Kabinett nach einer regulären Wahl* und ein *größerer prozentualer Sitzanteil* im Parlament im Falle von Minderheitsregierungen als stabilisierende Faktoren.
 
+Ausgehend von diesen Ergebnissen kann sich nun die Frage gestellt werden: welche dieser Faktoren überwiegen nun? Lässt sich abschließend zudem eine Aussage treffen, ob Minderheitsregierungen, wie bisher in der Forschung oftmals vermutet, wirklich instabiler sind, als Regierungen, die eine Mehrheit im Parlament haben? Weiterhin ließe sich fragen, ob jene Minderheitsregierungen dann überhaupt erstrebenswerte Regierungsformen wären, wäre dies der Fall - und warum diese im Falle größerer Instabilität dann überhaupt noch immer circa 1/3 aller Regierungen ausmachen.
 
+In Richtung der Minderheitsregierungen als Ausdruck von Instabilität wurde in der Forschung zeitlich bereits weiter zurückliegend argumentiert (vgl. z. B. Blondel 1968, Sanders und Herman 1977). Doch auch in jüngerer Literatur ließen sich derartige Tendenzen bei der Interpretation dieser wiederfinden, so auch beispielsweise bei Thomas Saalfeld, dessen Modell diese Arbeit inspirierte (vgl. Saalfeld 2013 unter Rückgriff auf Riker 1962 und Robertson 1983). Dennoch schließt sich diese Arbeit in dieser Frage den Ausführungen von Kaare Strøm an: die Assoziation dieser Regierungsform mit Instabilität kommt teilweise aus historischer Perspektive, teilweise jedoch auch, wie Strøm anmerkt, aus den politisch eher turbulenten Systemen Südeuropas, welche ebenfalls mit Minderheitsregierungen assoziiert werden. Dass dem jedoch nicht so ist konnte Strøm in seiner damaligen Analyse zeigen. Ebenfalls stellt er sich dort gegen die Interpretation von Minderheitsregierungen als einen letzten Ausweg und spricht sich auf Basis seiner Daten eher für eine Deutung dieser als rationale Kabinettsentscheidungen aus (vgl. Strøm 1984, S. 222f.). Gerade auch aus aktueller Perspektive, also während der Covid-19-Pandemie, zeigen auch Minderheitsregierungen ihre Handlungsfähigkeit, wie von Krauss und Thürk zurecht im Falle Neuseelands anführen (vgl. Krauss/Thürk 2021, S. 1f.). Somit bezieht vorliegende Arbeit in dieser Frage ebenfalls die Stellung, dass Minderheitsregierungen handlungsfähig sein können und daher von den Akteuren nicht nur als letzter Ausweg gesehen werden.
 
-
-
-
-
-
-
-
+Als Ausblick für zukünftige Forschungen ist es selbstverständlich generell wünschenswert, dass Minderheitsregierungen als Forschungsobjekt auch weiterhin fester Bestandteil dieser bleiben. Positiv hervorgehoben werden soll hierbei die Arbeit von Krauss und Thürk 2021 zur Untersuchung der Stabilität von Minderheitsregierungen durch Unterstützungsabkommen. Hier wäre in zukünftiger Forschung auch eine Form des Mixed Methods-Ansatzes denkbar: so könnte in einem ersten Schritt analysiert werden, für welche Minderheitsregierungen, bei denen ein solches Abkommen vorliegt, die Arbeit besonders stabil funktionierte. In einem zweiten Schritt könnten dann, beispielsweise durch qualitative Textanalyse dieser Dokumente (sofern diese vorliegen), Faktoren herausgearbeitet werden, die für diese Zusammenarbeit besonders wichtig waren. Auch ein eher qualitatives Vorgehen mittels der Methode des Process Tracing wäre hier wohl denkbar: so könnte eine solche Zusammenarbeit und deren Ablauf von Zusammenschluss bis Regierungsende von Parteien in einer Koalitions-Minderheitsregierung bezüglich ihrer genauen Form näher analysiert werden. Somit könnte eventuell herausgearbeitet werden, welche Faktoren die Zusammenarbeit dort von jener in Mehrheitskabinetten unterscheiden. Diese Arbeit schließt mit eben jenen möglichen Pfaden für zukünftige Forschung.
 
 # Literaturverzeichnis
 
@@ -563,6 +563,19 @@ Russell Sage Foundation and Princeton, NJ: Princeton University Press.
 
 + Vowles, Jack (2010): *Making a difference? Public perceptions of coalitions, single-party, and minority governments*, Electoral Studies, Vol. 29, S. 370-380.
 
++ Laakso, Markku; Taagepera, Rein (1979): *Effective Number of Parties: A Measurement with Application to West Europe*, Comparative Political Studies, Vol. 12, S. 3-27.
+
++ Crombez, Christophe (1996): *Minority governments, minimal winning coalitions and surplus majorities in parliamentary systems*, European Journal of Political Research, Vol. 29, S. 1-29.
+
++ Druckman, James; Thies, Michael (2002): *The Importance of Concurrence: The Impact of Bicameralism on Government Formation and Duration*, American Journal of Political Science, Vol. 46, Iss. 4, S. 760-771.
+
++ Blondel, Jean (1968): *Party Systems and Patterns of Government in Western Democracies*, Canadian Journal of Political Science, Vol. 1, Iss. 2, S. 180-203.
+
++ Saalfeld, Thomas (2013): *Economic Performance, Political Institutions and Cabinet Durability in 28 European Parliamentary Democracies, 1945-2011*, in: Narud, Hanne; Müller, Wolfgang (2013): *Party Governance and Party Democracy*, Springer Science+Business Media, New York 2013.
+
++ Riker, William (1962): *The theory of political coalitions*, Yale University Press, New Haven.
+
++ Robertson, John (1983): *The Political Economy and the Durability of European Coalition Cabinets: New Variations on a Game-Theoretic Perspective*, Journal of Politics, Vol. 45, Iss. 4, S. 932-957.
 
 # Abbildungsverzeichnis
 
